manifest/objects/DNBConnect__DnBAccountMetadata__c.object
<CustomObject>
    <description>This is a D&amp;B custom object used to store data that&apos;s used for Connect dashboards, to minimize the impact on the standard Account object.</description>
    <fields>
        <fullName>DNBConnect__Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Account_Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DNBConnect__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>D&amp;B Account Metadata</relationshipLabel>
        <relationshipName>DnBAccountMetadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DNBConnect__LinkageOpportunityType__c</fullName>
        <description>0 = Not Evaluated
1 = Correctly Linked
2 = Standalone (Not a Family Tree Member)
3 = No Parent (Global Ultimate)
4 = Link Opportunity
5 = Create and Link Opportunity
6 = Relink Opportunity
7 = Create and Relink Opportunity
8 = Duplicate Parent</description>
        <inlineHelpText>0 = Not Evaluated
1 = Correctly Linked
2 = Standalone (Not a Family Tree Member)
3 = No Parent (Global Ultimate)
4 = Link Opportunity
5 = Create and Link Opportunity
6 = Relink Opportunity
7 = Create and Relink Opportunity
8 = Duplicate Parent</inlineHelpText>
        <label>Linkage Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNBConnect__Parent_DUNS__c</fullName>
        <label>D&amp;B Parent DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__parent_id__c</fullName>
        <formula>CASESAFEID(DNBConnect__Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__reparented__c</fullName>
        <formula>DNBConnect__parent_id__c  &lt;&gt; DNBConnect__Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reparented</label>
        <type>Checkbox</type>
    </fields>
    <label>D&amp;B Account Metadata</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Account Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>